samples/_failures_safe/1761729631_5c7090_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5205d1d2.c: In function ‘main’:
./samples/SAFE/__tmp_5205d1d2.c:150:18: error: ‘de’ undeclared (first use in this function)
  150 |     buffer_free(&de
      |                  ^~
./samples/SAFE/__tmp_5205d1d2.c:150:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5205d1d2.c:150:20: error: expected ‘)’ at end of input
  150 |     buffer_free(&de
      |                ~   ^
      |                    )
./samples/SAFE/__tmp_5205d1d2.c:150:5: error: expected declaration or statement at end of input
  150 |     buffer_free(&de
      |     ^~~~~~~~~~~
